# harvest-operations

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  start-fastapi.command
codework/: harvest-records.csv  missingCodes.csv
curation/: .gitignore  README.md  pmtiles_config.sample.json  pyproject.toml  rename_map.csv
curation/jobs/: arcgis_curation_pipeline_template.yaml  stpaul-2026.yaml
curation/run_records/: README.md
curation/scripts/: arcgis_curation_pipeline.py  build_pmtiles_from_gpkg.py  convert_shapefiles_to_geopackage.py  create_COG_multiple.py  create_cog_thumbnails.py  create_geotiff_cogs.py  create_pm_tiles.py  create_pm_tiles_from_gpkg.py  crop_cog_black_collars.py  embed_qgis_metadata.py  export_gdb_feature_classes_to_gpkg.py  extract_attribute_table_fgdc.py  extract_cog_bboxes.py  extract_gpkg_fields.py  extract_gpkg_metadata.py  extract_metadata.py  extract_rest_service_fields.py  get_thumbs.py  group_csv_rows.py  inventory_geotiffs.py  merge_csvs.py  open_gdb.py  parse_gdb_metadata_xml.py  process_geotiff_zip_batches.py  rename_gpkg.py  zip_geopackages.py
curation/scripts/templates/: qgis-metadata.xml
curation/src/curation/: __init__.py  arcgis_curation_pipeline.py  embed_qgis_metadata.py  group_csv_rows.py  merge_csvs.py  process_geotiff_zip_batches.py  thumbnails.py  zip_geopackages.py
curation/test-records/: test-metadata.csv
curation/tests/: test_arcgis_curation_pipeline.py  test_embed_qgis_metadata.py  test_group_csv_rows.py  test_merge_csvs.py  test_process_geotiff_zip_batches.py  test_zip_geopackages.py
(+521 files in other folders)
