[project]
name = "curation"
version = "0.1.0"
description = "Curation data pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4",
  "fiona",
  "geopandas",
  "matplotlib",
  "pandas",
  "pyyaml",
  "rasterio",
  "requests",
  "shapely",
  "tqdm",
]

[project.optional-dependencies]
python-gdal = ["gdal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
